[package]
name = "jet-simulation"
version = "0.1.0"
edition = "2021"

# [features]
# interface = [
#     "anyhow",
#     "async-trait",
#     "solana-sdk",
#     "solana-transaction-status"
# ]
# utils = [
#     "anchor-lang",
#     "rand",
#     "solana-client",
#     "solana-sdk"
# ]
# client = [
#     "interface",
#     "hashbrown",
#     "solana-account-decoder",
#     "solana-client",
#     "solana-sdk",
#     "solana-transaction-status"
# ]
# runtime = ["utils", "interface"]

[dependencies]
anyhow = { version = "1" } # , optional = true }
async-trait = { version = "0.1" } # , optional = true }
bincode = "1.3"
bytemuck = "1"
futures = "0.3"
hashbrown = { version = "0.12.3" } # , optional = true }
parking_lot = "0.12"
rand = { version = "0.7" } # , optional = true }
thiserror = "1"
tokio = { version = "1", features = ["rt"] }

solana-account-decoder = { version = "1.10" } # , optional = true }
solana-client = { version = "1.10" } # , optional = true }
solana-sdk = { version = "1.10" } # , optional = true }
solana-transaction-status = { version = "1.10" } # , optional = true }

spl-token = "3"
spl-token-swap = "3"
spl-associated-token-account = "1"
pyth-sdk-solana = "0.6.1"

anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" } # , optional = true }
