[package]
name = "jet-simulation"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1.3"
bytemuck = "1"
futures = "0.3"
parking_lot = "0.12"
rand = "0.7"
tokio = { version = "1", features = ["rt"] }

solana-account-decoder = ">= 1.10, <= 1.14"
solana-client = ">= 1.10, <= 1.14"
solana-sdk = ">= 1.10, <= 1.14"
solana-transaction-status = ">= 1.10, <= 1.14"

spl-token = "3"
spl-token-swap = "2"
spl-associated-token-account = "1"
pyth-sdk-solana = "0.6"
